--- a/project-docker/src/app/pages/login/login.page.html
+++ b/project-docker/src/app/pages/login/login.page.html
@@ -11,7 +11,7 @@
   <ion-content>
     <form>
       <ion-item lines="full">
-        <ion-label position="floating">Email</ion-label>
+        <ion-label position="floating">Identifiant</ion-label>
         <ion-input type="text"[(ngModel)]="login" name ="login"  required></ion-input>
       </ion-item>
 
