--- a/project-docker/src/app/pages/match-modal/match-modal.component.html
+++ b/project-docker/src/app/pages/match-modal/match-modal.component.html
@@ -7,6 +7,10 @@
 <ion-content>
   <p class="ion-text-center">Bravo vous avez matché avec {{data}}</p>
 
+  <ion-item lines="full">
+    <ion-label position="floating">Envoyez un message</ion-label>
+    <ion-input type="text"[(ngModel)]="firstMessage" name ="login"  required></ion-input>
+  </ion-item>
   <ion-button  color="success" [routerLink]="['/chat']">
     Commencer à chatter
   </ion-button>
