--- a/project-docker/src/app/pages/matchs/matchs.page.html
+++ b/project-docker/src/app/pages/matchs/matchs.page.html
@@ -83,11 +83,11 @@
   <ion-list >
     <ion-item detail routerLink="/chat" (click) = "goToRoom(person.id)" >
       <ion-avatar slot="start" >
-        <img src="{{person.img}}">
+        <img src="../../assets/eminem.png">
       </ion-avatar>
       <ion-label>
         <div class="flex_box">
-          <h3>{{person.name}}</h3>
+          <h3>{{person.firstname}}</h3>
         </div>
         <p><ion-icon class="text-icon" color="primary" name="done-all"></ion-icon> Cliquez pour accéder à la conversation</p>
       </ion-label>
